# pyannote-metrics

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  api.html  basics.html  changelog.html  cli.html  genindex.html  index.html  index.html~  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
.doctrees/: api.doctree  basics.doctree  changelog.doctree  cli.doctree  environment.pickle  index.doctree  reference.doctree  tutorial.doctree
.github/workflows/: doc.yml  release.yml  test.yml
_modules/: index.html
_sources/: basics.rst.txt  changelog.rst.txt  cli.rst.txt  index.rst.txt  reference.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
doc/: Makefile  index.ipynb  pyannote.metrics.diarization.ipynb  pyannote.metrics.segmentation.ipynb
doc/source/: changelog.rst  cli.rst  conf.py  tutorial.rst
docs/: Makefile  requirements.txt
docs/source/: api.rst  basics.rst  changelog.rst  cli.rst  conf.py  index.rst  reference.rst
notebooks/: Better purity metric.ipynb  Untitled.ipynb  index.ipynb  pyannote.metrics.diarization.ipynb  pyannote.metrics.identification.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pyannote/: __init__.py
pyannote/metrics/: __init__.py  _version.py  base.py  binary_classification.py  cli.py  detection.py  diarization.py  gamma.py  identification.py  (+5 more)
scripts/: pyannote-metrics.py  pyannote_eval.py
tests/: test_base.py  test_detection.py  test_diarization.py  test_identification.py
(+35 files in other folders)
