[project]
name = "pyannote-metrics"
description = "A toolkit for reproducible evaluation, diagnostic, and error analysis of speaker diarization systems"
readme = "README.md"
authors = [
    { name = "Hervé BREDIN", email = "herve@pyannote.ai" }
]
requires-python = ">=3.10"

dynamic = [
  "version",
]

dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyannote-core>=6.0.0",
    "pyannote-database>=6.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
]

[project.scripts]
pyannote-metrics = "pyannote.metrics.cli:main"


[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]
doc = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
]
cli = [
    "docopt>=0.6.2",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
]
plot = [
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
